fix homepage slider align

--- a/docs/index.css
+++ b/docs/index.css
@@ -122,7 +122,7 @@ footer a {
 /* below are for img slider */
 
 .slider_homepage {
-    width: 80%;
+    width: 60%;
     height: 450px;
     border-radius: 10px;
     overflow: hidden;
